修改server提供视频流，client显示视频

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -2,8 +2,20 @@
 add_executable(client
     client.cc
     ../common/codec.h
-    cameraapp.h
-    cameraapp.cc
+    ../common/common.h
+    ../common/common.cc
+    display_image.h
+    display_image.cc
 )
 
-target_link_libraries(client muduo_net muduo_base)
+target_link_libraries(client
+    muduo_net
+    muduo_base
+    opencv_core
+    opencv_highgui
+    opencv_imgcodecs
+    opencv_imgproc
+    opencv_videoio
+    opencv_video
+    dl
+)
